fix(ci): use full docker path for zsh compatibility

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,15 +95,6 @@ jobs:
 
           ssh -i ~/.ssh/deploy_key -p ${SSH_PORT:-22} ${SSH_USER}@${SSH_HOST} "grep -i '^openai' ${DEPLOY_PATH}/requirements.txt || echo 'openai entry not found'; (sha256sum ${DEPLOY_PATH}/requirements.txt || shasum -a 256 ${DEPLOY_PATH}/requirements.txt || true) 2>/dev/null"
 
-          ssh -i ~/.ssh/deploy_key -p ${SSH_PORT:-22} ${SSH_USER}@${SSH_HOST} << 'ENDSSH'
-            set -euo pipefail
-            cd /opt/sprache_motivator
-            if command -v docker-compose >/dev/null 2>&1; then COMPOSE="docker-compose"; else COMPOSE="docker compose"; fi
-            $COMPOSE down || true
-            $COMPOSE build --no-cache bot
-            $COMPOSE up -d
-            $COMPOSE ps
-            $COMPOSE logs --tail=80 bot || true
-          ENDSSH
+          ssh -i ~/.ssh/deploy_key -p ${SSH_PORT:-22} ${SSH_USER}@${SSH_HOST} "bash -c 'set -euo pipefail && cd /opt/sprache_motivator && /usr/bin/docker compose down || true && /usr/bin/docker compose build --no-cache bot && /usr/bin/docker compose up -d && /usr/bin/docker compose ps && /usr/bin/docker compose logs --tail=80 bot || true'"
 
           rm -f ~/.ssh/deploy_key .env.tmp
