--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pydantic-settings==2.1.0
 sqlalchemy==2.0.23
 alembic==1.13.1
 APScheduler==3.10.4
+tzdata==2024.2
 
 # Optional MongoDB support
 motor==3.6.0
