--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,13 @@ aiogram==3.3.0
 aiohttp==3.9.1
 openai>=1.54.0
 redis==5.0.1
-asyncpg==0.29.0
 python-dotenv==1.0.0
 pydantic==2.5.3
 pydantic-settings==2.1.0
-sqlalchemy==2.0.23
-alembic==1.13.1
 APScheduler==3.10.4
 tzdata==2024.2
 
-# Optional MongoDB support
+# MongoDB support
 motor==3.6.0
 
 # Development dependencies
