ci: disable redundant workflows on push, keep only deploy

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,11 @@
 name: Build and Package
 
 on:
-  push:
-    branches: [ main, develop ]
-    tags: [ 'v*' ]
-  workflow_dispatch:
+  # Disabled auto-trigger on push to avoid redundant runs (deploy.yml handles deployment)
+  # push:
+  #   branches: [ main, develop ]
+  #   tags: [ 'v*' ]
+  workflow_dispatch:  # Manual trigger only
 
 jobs:
   build:
