--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,12 @@
 name: Python Tests
 
 on:
-  push:
-    branches: [ main, develop ]
+  # Disabled auto-trigger on push to avoid redundant runs (deploy.yml handles deployment)
+  # push:
+  #   branches: [ main, develop ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, develop ]  # Still run on PRs for validation
+  workflow_dispatch:  # Manual trigger
 
 jobs:
   test:
