--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,6 +90,6 @@ jobs:
 
           ssh -i ~/.ssh/deploy_key -p ${SSH_PORT:-22} ${SSH_USER}@${SSH_HOST} "grep -i '^openai' ${DEPLOY_PATH}/requirements.txt || echo 'openai entry not found'; (sha256sum ${DEPLOY_PATH}/requirements.txt || shasum -a 256 ${DEPLOY_PATH}/requirements.txt || true) 2>/dev/null"
 
-          ssh -i ~/.ssh/deploy_key -p ${SSH_PORT:-22} ${SSH_USER}@${SSH_HOST} "bash -c 'set -euo pipefail && cd /opt/sprache_motivator && /usr/bin/docker compose down || true && /usr/bin/docker compose build --no-cache bot && /usr/bin/docker compose up -d && echo \n--- docker compose ps ---\n && /usr/bin/docker compose ps && echo \n--- bot logs (last 300 lines) ---\n && /usr/bin/docker compose logs --tail=300 bot || true'"
+          ssh -i ~/.ssh/deploy_key -p ${SSH_PORT:-22} ${SSH_USER}@${SSH_HOST} "bash -c 'set -euo pipefail && cd /opt/sprache_motivator && /usr/bin/docker compose down || true && /usr/bin/docker compose build --no-cache bot && /usr/bin/docker compose up -d && printf '\\n--- docker compose ps ---\\n' && /usr/bin/docker compose ps && printf '\\n--- bot logs (last 300 lines) ---\\n' && /usr/bin/docker compose logs --tail=300 bot || true'"
 
           rm -f ~/.ssh/deploy_key .env.tmp
