--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Server
+docker exec -it sprache_motivator-redis-1 redis-cli   # имя контейнера подставь своёdocker exec -it sprache_motivator-redis-1 redis-cli   # имя контейнера подставь своёdocker exec -it sprache_motivator-redis-1 redis-cli   # имя контейнера подставь своёname: Deploy to Server
 
 on:
   push:
