--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,6 +91,7 @@ jobs:
           ssh -i ~/.ssh/deploy_key -p ${SSH_PORT:-22} ${SSH_USER}@${SSH_HOST} "grep -i '^openai' ${DEPLOY_PATH}/requirements.txt || echo 'openai entry not found'; (sha256sum ${DEPLOY_PATH}/requirements.txt || shasum -a 256 ${DEPLOY_PATH}/requirements.txt || true) 2>/dev/null"
 
           # Run docker compose commands on remote host. Avoid nested bash -c to prevent parsing issues with parentheses/newlines.
-          ssh -i ~/.ssh/deploy_key -p ${SSH_PORT:-22} ${SSH_USER}@${SSH_HOST} 'set -euo pipefail && cd '"${DEPLOY_PATH}"' && /usr/bin/docker compose down || true && /usr/bin/docker compose build --no-cache bot && /usr/bin/docker compose up -d && echo "--- docker compose ps ---" && /usr/bin/docker compose ps && echo "--- bot logs (last 300 lines) ---" && /usr/bin/docker compose logs --tail=300 bot || true'
+          # Added: docker compose pull + docker image prune to ensure fresh images are used
+          ssh -i ~/.ssh/deploy_key -p ${SSH_PORT:-22} ${SSH_USER}@${SSH_HOST} 'set -euo pipefail && cd '"${DEPLOY_PATH}"' && /usr/bin/docker compose down || true && /usr/bin/docker image prune -f && /usr/bin/docker compose build --no-cache --pull bot && /usr/bin/docker compose up -d && echo "--- docker compose ps ---" && /usr/bin/docker compose ps && echo "--- bot logs (last 300 lines) ---" && /usr/bin/docker compose logs --tail=300 bot || true'
 
           rm -f ~/.ssh/deploy_key .env.tmp
