Configure Mini App for nginx-proxy with global ACME email

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,7 @@ ADMIN_CONTACT=@reeziat
 WEBAPP_URL=
 # Port for the internal web app server (default: 8080)
 WEBAPP_PORT=8080
+
+# If you use nginx-proxy (jwilder) + nginx-proxy-acme for automatic HTTPS
+# Hostname only (NO https://), e.g. web-app.example.com
+WEBAPP_HOST=
