feat: use cloudinary for flashcard images

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Example: mongodb+srv://user:pass@cluster/dbname or mongodb://localhost:27017/sprache_motivator
 MONGODB_URI=mongodb://localhost:27017/sprache_motivator
 
+# Cloudinary Configuration (for flashcard images)
+# Get from: https://cloudinary.com/console
+CLOUDINARY_URL=cloudinary://api_key:api_secret@cloud_name
+CLOUDINARY_FOLDER=sprache_motivator_flashcards
+
 # Redis Configuration
 REDIS_HOST=redis
 REDIS_PORT=6379
