--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,9 @@ pytz==2024.2
 # MongoDB support
 motor==3.6.0
 
+# Cloudinary for image storage
+cloudinary==1.41.0
+
 # Development dependencies
 pytest==7.4.3
 pytest-asyncio==0.21.1
